added url-link append for modals to be visible upon sharing

--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -35,6 +35,7 @@
 	  max-height: 57em;
 	  max-width: 66em;
 	  width: 85%;
+	  border-radius: 1rem;
 	}
   }
   .modaloverlay .modal > iframe, .modaloverlay .modal > div {
