--- a/src/components/modal/style.css
+++ b/src/components/modal/style.css
@@ -25,7 +25,7 @@
 	position: relative;
 	margin: 0 auto;
 	padding: 1rem 1rem 0rem 1rem;
-	overflow-y: scroll;
+	overflow-y: auto;
 	-webkit-overflow-scrolling: touch;
   }
   @media (min-width: 60em) {
@@ -40,8 +40,8 @@
   }
   .modaloverlay .modal > iframe, .modaloverlay .modal > div {
 	border: none;
-	width: 100%;
-	height: 100%;
+	/* width: 100%;
+	height: 100%; */
   }
   .modaloverlay .close {
 	font-size: 50px;
