--- a/src/routes/md/style.css
+++ b/src/routes/md/style.css
@@ -18,6 +18,8 @@
 
 .profile pre{
 	padding: 1rem;
-	border: 3px solid #C0C0FF;
+	border: 0;
 	border-radius: 5px;
+	color: white;
+	background-color: #7070FF;
 }
