--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -20,57 +20,43 @@
 }
 
 
-
-.header nav a {
-	display: inline-block;
-	height: 56px;
-	line-height: 56px;
-	padding: 0 15px;
-	min-width: 50px;
-	text-align: center;
-	background: rgba(255,255,255,0);
-	text-decoration: none;
-	color: #FFF;
-	will-change: background-color;
-}
-
-.header nav a:hover,
-.header nav a:active {
-	background: rgba(0,0,0,0.2);
-}
-
-.header nav a.active {
-	background: rgba(0,0,0,0.4);
-}
-
-.header nav .logo {
+.header .logo {
 	display: none;
 }
 
 .header .navbar {
 	display: flex;
 	flex-direction: row;
-	flex-grow: 4;
 	justify-content: space-between;
-	align-items: center;
 	width: 100%;
+	height: 56px;
+	line-height: 56px;
 }
 
-.header .navbar .logo {
-	position: absolute;
-	left: 0;
-}
 
-.header .navbar .links {
+
+.header .navbar .links{
 	display: flex;
 	flex-direction: row;
-	flex-grow: 4;
-	justify-content: space-evenly;
+	justify-content: space-around;
 	align-items: center;
 	flex-wrap: wrap;
+	flex-grow: 1;
+}
+
+.header .navbar .links a{
+	min-width: 20%;
+	padding: 0;
+	margin: 0;
+	color: aliceblue;
+	text-align: center;
+	text-decoration: none;
 
 }
 
+.header .navbar .links a:hover{
+	background:rgba(0,0,0,0.2);
+}
 
 @media (min-width: 50em) {
 	.header .navbar .logo {
@@ -82,22 +68,11 @@
 	}
 
 
-	.header .navbar {
-		display: flex;
-		flex-direction: row;
-		flex-grow: 4;
-		justify-content: space-between;
-	}
-
-	.header .navbar .logo {
-		position: absolute;
-		left: 0;
-	}
 
 	.header .navbar .links {
-		display: flex;
-		flex-direction: row;
-		flex-grow: 4;
-		justify-content: flex-end;
+		max-width: 50%;
+		margin-right: 15%;
+
 	}
+
 }
